--- a/scss/_main-content.scss
+++ b/scss/_main-content.scss
@@ -18,8 +18,6 @@ main {
   @include grid(main);
   color: #535353;
   height: 100%;
-  width: 100%;
-  overflow-x: hidden;
 }
 
 h2, h3 {
